// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformServerAction2 > arrow 1`] = `
"
let count = 0;

function Counter() {
  const name = "value";

  return {
    type: "form",
    action: $$action_0.bind(null, name)
  }
}
;
let $$action_0 = (name, formData) => {
      "use server";
      count += Number(formData.get(name));
    };
import { registerServerReference as $$register } from "/src/features/server-action/server";
$$action_0 = $$register($$action_0, "<id>", "$$action_0");
export { $$action_0 };
"
`;

exports[`transformServerAction2 > closure 1`] = `
"
let count = 0;

function Counter() {
  const name = "value";

  const changeCount = $$action_0_changeCount.bind(null, name);

  return "something";
}
;
async function $$action_0_changeCount(name, formData){
    "use server";
    count += Number(formData.get(name));
  };
import { registerServerReference as $$register } from "/src/features/server-action/server";
$$action_0_changeCount = $$register($$action_0_changeCount, "<id>", "$$action_0_changeCount");
export { $$action_0_changeCount };
"
`;

exports[`transformServerAction2 > many 1`] = `
"
let count = 0;

function Counter() {
  const name = "value";

  const changeCount = $$action_0_changeCount.bind(null, name);

  const changeCount2 = $$action_1_changeCount2.bind(null, name);

  return "something";
}

async function changeCount3(formData) {
  "use server";
  count += Number(formData.get(name));
}

;
async function $$action_0_changeCount(name, formData){
    "use server";
    count += Number(formData.get(name));
  };
async function $$action_1_changeCount2(name, formData){
    "use server";
    count += Number(formData.get(name));
  };
import { registerServerReference as $$register } from "/src/features/server-action/server";
$$action_0_changeCount = $$register($$action_0_changeCount, "<id>", "$$action_0_changeCount");
export { $$action_0_changeCount };
$$action_1_changeCount2 = $$register($$action_1_changeCount2, "<id>", "$$action_1_changeCount2");
export { $$action_1_changeCount2 };
changeCount3 = $$register(changeCount3, "<id>", "changeCount3");
export { changeCount3 };
"
`;

exports[`transformServerAction2 > top level 1`] = `
"
async function f() {
  "use server";
}
async function g() {
}
;
import { registerServerReference as $$register } from "/src/features/server-action/server";
f = $$register(f, "<id>", "f");
export { f };
"
`;
